fix for overflow on form

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -65,7 +65,6 @@ body {
   .footer-content {
     padding: 5rem 0;
     margin: 0 auto;
-    overflow-y: scroll;
   }
 
   .link-privacy {
